--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ ecks<!DOCTYPE html>
     <title>Sexendrecks</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+     <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-gray-50 font-sans">
     <!-- Navigation -->
