--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
-                    <a href="#" class="text-xl font-bold gradient-text">MyPortfolio</a>
+                    <a href="#" class="text-xl font-bold gradient-text">Sexendrecks</a>
                 </div>
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="#home" class="nav-link text-gray-700 hover:text-blue-500">Home</a>
@@ -69,9 +69,7 @@
                         <div class="absolute inset-0 bg-gradient-to-br from-blue-400 to-purple-500 rounded-full opacity-20 blur-xl"></div>
                         <div class="relative floating w-full h-full bg-white rounded-full overflow-hidden shadow-xl">
                             <!-- Placeholder for your image -->
-                            <div class="w-full h-full bg-gray-200 flex items-center justify-center">
-                                <i class="fas fa-user text-6xl text-gray-400"></i>
-                            </div>
+                            <div style="max-width: 292px;"><div style="left: 0; width: 110%; height: 0; position: relative; padding-bottom: 120.5761%;"><iframe src="//iframely.net/akXTJsdo" style="top: -80; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen=""></iframe></div></div>
                         </div>
                     </div>
                 </div>
