--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                 <i class="fas fa-graduation-cap text-2xl"></i>
                             </div>
                             <h4 class="font-medium">Education</h4>
-                            <p class="text-sm text-gray-500">Abschluss Bezirkschule</p>
+                            <p class="text-sm text-gray-500">Bezirkschule</p>
                         </div>
                         <div class="bg-gray-50 p-4 rounded-lg">
                             <div class="text-purple-500 mb-2">
