--- a/index.html
+++ b/index.html
@@ -89,9 +89,7 @@
                 <div class="md:w-1/3 mb-10 md:mb-0 flex justify-center">
                     <div class="w-64 h-64 rounded-full overflow-hidden shadow-lg">
                         <!-- Placeholder for your image -->
-                        <div class="w-full h-full bg-gray-200 flex items-center justify-center">
-                            <i class="fas fa-user text-6xl text-gray-400"></i>
-                        </div>
+                        <div style="max-width: 576px;"><div style="left: 0; width: 110%; height: 0; position: relative; padding-bottom: 120.5761%;"><iframe src="//iframely.net/J3lcN8q7" style="top: -80; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen></iframe></div></div>
                     </div>
                 </div>
                 <div class="md:w-2/3 md:pl-12">
