--- a/index.html
+++ b/index.html
@@ -191,11 +191,11 @@
                 <!-- Skill Item 5 -->
                 <div class="bg-white p-6 rounded-xl shadow-sm card-hover">
                     <div class="text-green-500 mb-4 text-4xl">
-                        <i class="fab fa-node-js"></i>
+                        <i class="fab fa-python"></i>
                     </div>
-                    <h3 class="text-lg font-semibold mb-2">Node.js</h3>
+                    <h3 class="text-lg font-semibold mb-2">Python</h3>
                     <div class="w-full bg-gray-200 rounded-full h-2">
-                        <div class="bg-green-500 h-2 rounded-full" style="width: 10%"></div>
+                        <div class="bg-green-500 h-2 rounded-full" style="width: 25%"></div>
                     </div>
                 </div>
                 
