--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
                 <!-- Skill Item 8 -->
                 <div class="bg-white p-6 rounded-xl shadow-sm card-hover">
                     <div class="text-gray-800 mb-4 text-4xl">
-                        <i class="fas fa-code-branch"></i>
+                        <i class="fas fa-github"></i>
                     </div>
-                    <h3 class="text-lg font-semibold mb-2">Git</h3>
+                    <h3 class="text-lg font-semibold mb-2">Github</h3>
                     <div class="w-full bg-gray-200 rounded-full h-2">
                         <div class="bg-gray-800 h-2 rounded-full" style="width: 10%"></div>
                     </div>
