--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 <!-- Skill Item 8 -->
                 <div class="bg-white p-6 rounded-xl shadow-sm card-hover">
                     <div class="text-gray-800 mb-4 text-4xl">
-                        <i class="fas fa-github"></i>
+                        <i class="fa-brands fa-github"></i>
                     </div>
                     <h3 class="text-lg font-semibold mb-2">Github</h3>
                     <div class="w-full bg-gray-200 rounded-full h-2">
