--- a/index.html
+++ b/index.html
@@ -91,12 +91,11 @@
                         </a>
                     </div>
                 </div>
-                <div class="md:w-1/2 flex justify-center">
-                    <div class="relative w-64 h-64 md:w-80 md:h-80">
-                        <div class="absolute inset-0 bg-gradient-to-br from-blue-400 to-purple-500 rounded-full opacity-20 blur-xl"></div>
-                        <div class="relative floating w-full h-full bg-white dark:bg-gray-700 rounded-full overflow-hidden shadow-xl">
-                            <!-- Placeholder for your image -->
-                            <div style="max-width: 320px;"><div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 120.5761%;"><iframe src="//iframely.net/akXTJsdo" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen=""></iframe></div></div>
+                 <div class="flex flex-col md:flex-row items-center">
+                    <div class="md:w-1/3 mb-10 md:mb-0 flex justify-center">
+                        <div class="w-64 h-64 rounded-full overflow-hidden shadow-lg">
+                            <!-- Replace with direct GIF image -->
+                            <img src="Oh No Facepalm.gif" alt="About Mike" class="w-full h-full object-cover" />
                         </div>
                     </div>
                 </div>
@@ -116,7 +115,7 @@
                 <div class="md:w-1/3 mb-10 md:mb-0 flex justify-center">
                     <div class="w-64 h-64 rounded-full overflow-hidden shadow-lg">
                         <!-- Placeholder for your image -->
-                        <div style="max-width: 576px;"><div style="left: 0; width: 120%; height: 0; position: relative; padding-bottom: 120.5761%;"><iframe src="//iframely.net/J3lcN8q7" style="top: -80; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen></iframe></div></div>
+                        <img src="Cat Kitten GIF by Demic.gif" alt="About Mike" class="w-full h-full object-cover" />
                     </div>
                 </div>
                 <div class="md:w-2/3 md:pl-12">
