--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="md:w-1/3 mb-10 md:mb-0 flex justify-center">
                         <div class="w-64 h-64 rounded-full overflow-hidden shadow-lg">
                             <!-- Replace with direct GIF image -->
-                            <img src="Oh No Facepalm GIF.gif" alt="About Mike" class="w-full h-full object-cover" />
+                            <img src="Oh No Facepalm GIF.gif" alt="About Mike" class="w-full h-full object-cover" style="max-width: 256px;"/>
                         </div>
                     </div>
                 </div>
