--- a/index.html
+++ b/index.html
@@ -93,9 +93,8 @@
                 </div>
                  <div class="flex flex-col md:flex-row items-center">
                     <div class="md:w-1/3 mb-10 md:mb-0 flex justify-center">
-                        <div class="w-64 h-64 rounded-full overflow-hidden shadow-lg">
-                            <!-- Replace with direct GIF image -->
-                           <img src="Oh No Facepalm GIF.gif" alt="About Mike" style="width: 256px; height: 256px; object-fit: cover;" />
+                        <div class="shadow-lg rounded-full overflow-hidden" style="width: 256px; height: 256px;">
+                            <img src="Oh No Facepalm GIF.gif" alt="About Mike" width="256" height="256" style="width: 256px; height: 256px; object-fit: cover;" />
                         </div>
                     </div>
                 </div>
