--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <div class="md:w-1/3 mb-10 md:mb-0 flex justify-center">
                     <div class="w-64 h-64 rounded-full overflow-hidden shadow-lg">
                         <!-- Placeholder for your image -->
-                        <img src="Cat Kitten GIF by Demic.gif" alt="About Mike" class="w-full h-full object-cover" />
+                        <img src="Oh-No-Facepalm.gif" alt="About Mike" style="width: 256px !important; height: 256px !important; object-fit: cover !important; display: block;" />
                     </div>
                 </div>
                 <div class="md:w-2/3 md:pl-12">
