--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                  <div class="flex flex-col md:flex-row items-center">
                     <div class="md:w-1/3 mb-10 md:mb-0 flex justify-center">
                         <div class="shadow-lg rounded-full overflow-hidden" style="width: 256px; height: 256px;">
-                            <img src="Oh No Facepalm GIF.gif" alt="About Mike" width="256" height="256" style="width: 256px; height: 256px; object-fit: cover;" />
+                            <img src="Oh No Facepalm GIF.gif" alt="About Mike" style="width: 256px !important; height: 256px !important; object-fit: cover !important; display: block;" />
                         </div>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                 <div class="md:w-1/3 mb-10 md:mb-0 flex justify-center">
                     <div class="w-64 h-64 rounded-full overflow-hidden shadow-lg">
                         <!-- Placeholder for your image -->
-                        <img src="Oh-No-Facepalm.gif" alt="About Mike" style="width: 256px !important; height: 256px !important; object-fit: cover !important; display: block;" />
+                        <img src="Cat Kitten GIF by Demic.gif" alt="About Mike" style="width: 256px !important; height: 256px !important; object-fit: cover !important; display: block;" />
                     </div>
                 </div>
                 <div class="md:w-2/3 md:pl-12">
