--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                  <div class="flex flex-col md:flex-row items-center">
                     <div class="md:w-1/3 mb-10 md:mb-0 flex justify-center">
                         <div class="shadow-lg rounded-full overflow-hidden" style="width: 256px; height: 256px;">
-                            <img src="Oh No Facepalm GIF.gif" alt="About Mike" style="width: 256px !important; height: 256px !important; object-fit: cover !important; display: block;" />
+                            <img src="White Cat Hello GIF.gif" alt="About Mike" style="width: 256px !important; height: 256px !important; object-fit: cover !important; display: block;" />
                         </div>
                     </div>
                 </div>
