--- a/index.html
+++ b/index.html
@@ -93,10 +93,11 @@
                 </div>
                  <div class="flex flex-col md:flex-row items-center">
                     <div class="md:w-1/3 mb-10 md:mb-0 flex justify-center">
-                        <div class="shadow-lg rounded-full overflow-hidden" style="width: 256px; height: 256px;">
-                             <img src="Cat Kitten GIF by Demic.gif" alt="About Mike" style="width: 256px !important; height: 256px !important; object-fit: cover !important; display: block;" />
+                        <div class="w-64 h-64 rounded-full overflow-hidden shadow-lg">
+                            <!-- Placeholder for your image -->
+                            <img src="Cat Kitten GIF by Demic.gif" alt="About Mike" style="width: 256px !important; height: 256px !important; object-fit: cover !important; display: block;" />
                         </div>
-                    </div>
+                    </div> 
                 </div>
             </div>
         </div>
