--- a/index.html
+++ b/index.html
@@ -92,11 +92,12 @@
                     </div>
                 </div>
                  <div class="flex flex-col md:flex-row items-center">
-                     <div class="md:w-1/2 flex justify-center">
-                    <div class="w-80 h-80 md:w-96 md:h-96 lg:w-112 lg:h-112 rounded-2xl overflow-hidden shadow-2xl border-4 border-blue-500 dark:border-blue-400">
-                        <!-- Significantly larger GIF with enhanced styling -->
-                        <img src="Cat Kitten GIF by Demic.gif" alt="About Mike" class="w-full h-full object-cover" />
-                    </div>
+                    <div class="md:w-1/3 mb-10 md:mb-0 flex justify-center">
+                        <div class="w-64 h-64 rounded-full overflow-hidden shadow-lg">
+                            <!-- Placeholder for your image -->
+                            <img src="Cat Kitten GIF by Demic.gif" alt="About Mike" style="width: 256px !important; height: 256px !important; object-fit: cover !important; display: block;" />
+                        </div>
+                    </div> 
                 </div>
             </div>
         </div>
