--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <div class="md:w-1/2 flex justify-center">
                     <div class="w-64 h-64 rounded-full overflow-hidden shadow-lg">
                         <!-- Fixed image with proper dimensions -->
-                        <img src="Cat Kitten GIF by Demic.gif" alt="Profile Image" class="profile-image" />
+                        <img src="Oh No Facepalm GIF.gif" alt="Profile Image" class="profile-image" />
                     </div>
                 </div>
             </div>
