--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Sexendrecks</title>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XG4M7Z90QZ"></script>
+    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -169,6 +170,7 @@
 
     <!-- Skills Section -->
     <section id="skills" class="section py-20 bg-gray-50 dark:bg-gray-900">
+        <model-viewer src="Astronaut.glb" alt="3D Modell Astronaut" camera-controls ar></model-viewer>
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
                 <h2 class="text-3xl md:text-4xl font-bold mb-4 dark:text-white">My <span class="gradient-text">Skills</span></h2>
