--- a/index.html
+++ b/index.html
@@ -169,8 +169,12 @@
     </section>
 
     <!-- Skills Section -->
-    <section id="skills" class="section py-20 bg-gray-50 dark:bg-gray-900">
-        <model-viewer src="Astronaut.glb" alt="3D Modell Astronaut" camera-controls ar></model-viewer>
+<section id="skills" class="section py-20 bg-gray-50 dark:bg-gray-900">
+  <model-viewer 
+            src="Astronaut.glb" 
+            alt="3D Astronaut" camera-controls style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 0; pointer-events: none;">
+    </model-viewer>
+      <div style="position: relative; z-index: 1;">
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
                 <h2 class="text-3xl md:text-4xl font-bold mb-4 dark:text-white">My <span class="gradient-text">Skills</span></h2>
@@ -269,6 +273,7 @@
                     </div>
                 </div>
             </div>
+        </div>
             
             <div class="mt-12 text-center">
                 <p class="text-gray-600 dark:text-gray-300 mb-6">
