--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     </section>
 
     <!-- Skills Section -->
-<section id="skills" class="section py-20 bg-gray-50 dark:bg-gray-900">
+<section id="skills" class="section py-20 bg-gray-50 dark:bg-gray-900" style="position: relative; overflow: hidden;">
   <model-viewer 
             src="Astronaut.glb" 
             alt="3D Astronaut" camera-controls style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 0; pointer-events: none;">
