--- a/index.html
+++ b/index.html
@@ -169,12 +169,7 @@
     </section>
 
     <!-- Skills Section -->
-<section id="skills" class="section py-20 bg-gray-50 dark:bg-gray-900" style="position: relative; overflow: hidden;">
-  <model-viewer 
-            src="Astronaut.glb" 
-            alt="3D Astronaut" camera-controls style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 0; pointer-events: none;">
-    </model-viewer>
-      <div style="position: relative; z-index: 1;">
+<section id="skills" class="section py-20 bg-gray-50 dark:bg-gray-900" style="position: relative; overflow: visible;">
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
                 <h2 class="text-3xl md:text-4xl font-bold mb-4 dark:text-white">My <span class="gradient-text">Skills</span></h2>
@@ -272,8 +267,22 @@
                         <div class="bg-gray-800 dark:bg-gray-300 h-2 rounded-full" style="width: 10%"></div>
                     </div>
                 </div>
+                <model-viewer 
+                    src="Astronaut.glb" 
+                    alt="3D Astronaut" 
+                    camera-controls 
+                    style="
+                      position: fixed; 
+                      top: 50%; 
+                      right: 0; 
+                      transform: translateY(-50%);
+                      width: 300px; 
+                      height: 400px; 
+                      z-index: 9999; 
+                      pointer-events: auto; 
+                      cursor: grab;"
+                  ></model-viewer>
             </div>
-        </div>
             
             <div class="mt-12 text-center">
                 <p class="text-gray-600 dark:text-gray-300 mb-6">
