--- a/index.html
+++ b/index.html
@@ -272,12 +272,12 @@
                     alt="3D Astronaut" 
                     camera-controls 
                     style="
-                      position: fixed; 
+                      position: absolute; 
                       top: 50%; 
                       right: 0; 
                       transform: translateY(-50%);
-                      width: 300px; 
-                      height: 400px; 
+                      width: 600px; 
+                      height: 700px; 
                       z-index: 9999; 
                       pointer-events: auto; 
                       cursor: grab;"
