--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                 <model-viewer 
                     src="Astronaut.glb" 
                     alt="3D Astronaut" 
-                    camera-controls 
+                    camera-controls  camera-orbit="45deg"
                     style="
                       position: absolute; 
                       top: 50%; 
