--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body class="bg-gray-50 font-sans dark:bg-gray-900 transition-colors duration-300">
     <!-- Navigation -->
-    <nav class="fixed w-full bg-white shadow-sm z-50 dark:bg-gray-800">
+    <nav class="fixed w-full bg-white shadow-sm dark:bg-gray-800">
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
