--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 <body class="bg-gray-50 font-sans dark:bg-gray-900 transition-colors duration-300">
     <!-- Navigation -->
-    <nav class="fixed w-full bg-white shadow-sm dark:bg-gray-800" id="nav">
+    <nav class="fixed w-full bg-white shadow-sm dark:bg-gray-800" style="z-index: 99999;">
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
