--- a/index.html
+++ b/index.html
@@ -314,12 +314,12 @@
                 <!-- Project 1 -->
                 <div class="bg-gray-50 dark:bg-gray-700 rounded-xl overflow-hidden shadow-sm card-hover">
                     <div class="h-48 bg-gradient-to-r from-blue-400 to-purple-500 flex items-center justify-center">
-                        <i class="fas fa-project-diagram text-6xl text-white opacity-80"></i>
+                        <i class="fas fa-hexagon-nodes text-6xl text-white opacity-80"></i>
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-2 dark:text-white">E-commerce Website</h3>
                         <p class="text-gray-600 dark:text-gray-300 mb-4">
-                            A full-stack e-commerce platform with React, Node.js, and MongoDB.
+                            A AI-Image Generator. A Cyberpunk Cat gets genereated, everytime the site gets loaded.
                         </p>
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="bg-blue-100 dark:bg-blue-900 text-blue-800 dark:text-blue-200 px-2 py-1 rounded text-xs">React</span>
