--- a/gallery.html
+++ b/gallery.html
@@ -80,7 +80,7 @@
                 <!-- Card Sample -->
                 <div class="gallery-item bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-sm card-hover">
                     <div class="aspect-w-16 aspect-h-9 relative">
-                        <img src="media/example.jpg" alt="Example" class="w-full h-56 object-cover">
+                        <img src="1258f001dd52fb8fb50b01b46ddede46.jpg" alt="Example" class="w-full h-56 object-cover">
                         <div class="absolute top-2 right-2">
                             <span class="bg-blue-500 text-white text-xs px-2 py-1 rounded-full">JPG</span>
                         </div>
@@ -104,6 +104,241 @@
                         </div>
                     </div>
                 </div>
+                <div class="gallery-item bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-sm card-hover">
+                    <div class="aspect-w-16 aspect-h-9 relative">
+                        <img src="18cf7c9397cb82796568162ee1aa8262.jpg" alt="Example" class="w-full h-56 object-cover">
+                        <div class="absolute top-2 right-2">
+                            <span class="bg-blue-500 text-white text-xs px-2 py-1 rounded-full">JPG</span>
+                        </div>
+                    </div>
+                    <div class="p-4">
+                        <h3 class="text-lg font-semibold mb-1 dark:text-white">Example Title</h3>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mb-3">Short description goes here.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-xs text-gray-500 dark:text-gray-400">01.01.2025</span>
+                            <div class="flex space-x-2">
+                                <button class="text-gray-500 hover:text-blue-500 dark:text-gray-400 dark:hover:text-blue-400">
+                                    <i class="fas fa-download"></i>
+                                </button>
+                                <button class="text-gray-500 hover:text-red-500 dark:text-gray-400 dark:hover:text-red-400">
+                                    <i class="fas fa-heart"></i>
+                                </button>
+                                <button class="text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-300">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="gallery-item bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-sm card-hover">
+                    <div class="aspect-w-16 aspect-h-9 relative">
+                        <img src="3zgp8itj6d641.webp" alt="Example" class="w-full h-56 object-cover">
+                        <div class="absolute top-2 right-2">
+                            <span class="bg-blue-500 text-white text-xs px-2 py-1 rounded-full">JPG</span>
+                        </div>
+                    </div>
+                    <div class="p-4">
+                        <h3 class="text-lg font-semibold mb-1 dark:text-white">Example Title</h3>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mb-3">Short description goes here.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-xs text-gray-500 dark:text-gray-400">01.01.2025</span>
+                            <div class="flex space-x-2">
+                                <button class="text-gray-500 hover:text-blue-500 dark:text-gray-400 dark:hover:text-blue-400">
+                                    <i class="fas fa-download"></i>
+                                </button>
+                                <button class="text-gray-500 hover:text-red-500 dark:text-gray-400 dark:hover:text-red-400">
+                                    <i class="fas fa-heart"></i>
+                                </button>
+                                <button class="text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-300">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="gallery-item bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-sm card-hover">
+                    <div class="aspect-w-16 aspect-h-9 relative">
+                        <img src="63b8ae4c2eda620e515a2b777c248b06.jpg" alt="Example" class="w-full h-56 object-cover">
+                        <div class="absolute top-2 right-2">
+                            <span class="bg-blue-500 text-white text-xs px-2 py-1 rounded-full">JPG</span>
+                        </div>
+                    </div>
+                    <div class="p-4">
+                        <h3 class="text-lg font-semibold mb-1 dark:text-white">Example Title</h3>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mb-3">Short description goes here.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-xs text-gray-500 dark:text-gray-400">01.01.2025</span>
+                            <div class="flex space-x-2">
+                                <button class="text-gray-500 hover:text-blue-500 dark:text-gray-400 dark:hover:text-blue-400">
+                                    <i class="fas fa-download"></i>
+                                </button>
+                                <button class="text-gray-500 hover:text-red-500 dark:text-gray-400 dark:hover:text-red-400">
+                                    <i class="fas fa-heart"></i>
+                                </button>
+                                <button class="text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-300">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="gallery-item bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-sm card-hover">
+                    <div class="aspect-w-16 aspect-h-9 relative">
+                        <img src="FuduWJ0WIAAZ-YN.jpeg" alt="Example" class="w-full h-56 object-cover">
+                        <div class="absolute top-2 right-2">
+                            <span class="bg-blue-500 text-white text-xs px-2 py-1 rounded-full">JPG</span>
+                        </div>
+                    </div>
+                    <div class="p-4">
+                        <h3 class="text-lg font-semibold mb-1 dark:text-white">Example Title</h3>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mb-3">Short description goes here.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-xs text-gray-500 dark:text-gray-400">01.01.2025</span>
+                            <div class="flex space-x-2">
+                                <button class="text-gray-500 hover:text-blue-500 dark:text-gray-400 dark:hover:text-blue-400">
+                                    <i class="fas fa-download"></i>
+                                </button>
+                                <button class="text-gray-500 hover:text-red-500 dark:text-gray-400 dark:hover:text-red-400">
+                                    <i class="fas fa-heart"></i>
+                                </button>
+                                <button class="text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-300">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="gallery-item bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-sm card-hover">
+                    <div class="aspect-w-16 aspect-h-9 relative">
+                        <img src="HD-wallpaper-nea-iraklia-sunset-beach-chalkidiki-greece-la-roca-sunst.jpg" alt="Example" class="w-full h-56 object-cover">
+                        <div class="absolute top-2 right-2">
+                            <span class="bg-blue-500 text-white text-xs px-2 py-1 rounded-full">JPG</span>
+                        </div>
+                    </div>
+                    <div class="p-4">
+                        <h3 class="text-lg font-semibold mb-1 dark:text-white">Example Title</h3>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mb-3">Short description goes here.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-xs text-gray-500 dark:text-gray-400">01.01.2025</span>
+                            <div class="flex space-x-2">
+                                <button class="text-gray-500 hover:text-blue-500 dark:text-gray-400 dark:hover:text-blue-400">
+                                    <i class="fas fa-download"></i>
+                                </button>
+                                <button class="text-gray-500 hover:text-red-500 dark:text-gray-400 dark:hover:text-red-400">
+                                    <i class="fas fa-heart"></i>
+                                </button>
+                                <button class="text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-300">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="gallery-item bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-sm card-hover">
+                    <div class="aspect-w-16 aspect-h-9 relative">
+                        <img src="IMG_20190721_170413-3968x2747-1920x1329.jpg" alt="Example" class="w-full h-56 object-cover">
+                        <div class="absolute top-2 right-2">
+                            <span class="bg-blue-500 text-white text-xs px-2 py-1 rounded-full">JPG</span>
+                        </div>
+                    </div>
+                    <div class="p-4">
+                        <h3 class="text-lg font-semibold mb-1 dark:text-white">Example Title</h3>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mb-3">Short description goes here.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-xs text-gray-500 dark:text-gray-400">01.01.2025</span>
+                            <div class="flex space-x-2">
+                                <button class="text-gray-500 hover:text-blue-500 dark:text-gray-400 dark:hover:text-blue-400">
+                                    <i class="fas fa-download"></i>
+                                </button>
+                                <button class="text-gray-500 hover:text-red-500 dark:text-gray-400 dark:hover:text-red-400">
+                                    <i class="fas fa-heart"></i>
+                                </button>
+                                <button class="text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-300">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="gallery-item bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-sm card-hover">
+                    <div class="aspect-w-16 aspect-h-9 relative">
+                        <img src="Petter_Solberg_-_2006_Cyprus_Rally.jpg" alt="Example" class="w-full h-56 object-cover">
+                        <div class="absolute top-2 right-2">
+                            <span class="bg-blue-500 text-white text-xs px-2 py-1 rounded-full">JPG</span>
+                        </div>
+                    </div>
+                    <div class="p-4">
+                        <h3 class="text-lg font-semibold mb-1 dark:text-white">Example Title</h3>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mb-3">Short description goes here.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-xs text-gray-500 dark:text-gray-400">01.01.2025</span>
+                            <div class="flex space-x-2">
+                                <button class="text-gray-500 hover:text-blue-500 dark:text-gray-400 dark:hover:text-blue-400">
+                                    <i class="fas fa-download"></i>
+                                </button>
+                                <button class="text-gray-500 hover:text-red-500 dark:text-gray-400 dark:hover:text-red-400">
+                                    <i class="fas fa-heart"></i>
+                                </button>
+                                <button class="text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-300">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="gallery-item bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-sm card-hover">
+                    <div class="aspect-w-16 aspect-h-9 relative">
+                        <img src="b3de56d9742c42770c8e09777230fa7f.jpg" alt="Example" class="w-full h-56 object-cover">
+                        <div class="absolute top-2 right-2">
+                            <span class="bg-blue-500 text-white text-xs px-2 py-1 rounded-full">JPG</span>
+                        </div>
+                    </div>
+                    <div class="p-4">
+                        <h3 class="text-lg font-semibold mb-1 dark:text-white">Example Title</h3>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mb-3">Short description goes here.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-xs text-gray-500 dark:text-gray-400">01.01.2025</span>
+                            <div class="flex space-x-2">
+                                <button class="text-gray-500 hover:text-blue-500 dark:text-gray-400 dark:hover:text-blue-400">
+                                    <i class="fas fa-download"></i>
+                                </button>
+                                <button class="text-gray-500 hover:text-red-500 dark:text-gray-400 dark:hover:text-red-400">
+                                    <i class="fas fa-heart"></i>
+                                </button>
+                                <button class="text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-300">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="gallery-item bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-sm card-hover">
+                    <div class="aspect-w-16 aspect-h-9 relative">
+                        <img src="c8ab614eb7f602cf471e1fdefd06f8a1.jpg" alt="Example" class="w-full h-56 object-cover">
+                        <div class="absolute top-2 right-2">
+                            <span class="bg-blue-500 text-white text-xs px-2 py-1 rounded-full">JPG</span>
+                        </div>
+                    </div>
+                    <div class="p-4">
+                        <h3 class="text-lg font-semibold mb-1 dark:text-white">Example Title</h3>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mb-3">Short description goes here.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-xs text-gray-500 dark:text-gray-400">01.01.2025</span>
+                            <div class="flex space-x-2">
+                                <button class="text-gray-500 hover:text-blue-500 dark:text-gray-400 dark:hover:text-blue-400">
+                                    <i class="fas fa-download"></i>
+                                </button>
+                                <button class="text-gray-500 hover:text-red-500 dark:text-gray-400 dark:hover:text-red-400">
+                                    <i class="fas fa-heart"></i>
+                                </button>
+                                <button class="text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-300">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
                 <!-- /Card Sample -->
 
             </div>
