--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 <!-- Project 1 -->
                 <div class="bg-gray-50 dark:bg-gray-700 rounded-xl overflow-hidden shadow-sm card-hover">
                     <div class="h-48 bg-gradient-to-r from-blue-400 to-purple-500 flex items-center justify-center">
-                        <i class="fas <i class="fa-solid fa-hexagon-nodes text-6xl text-white opacity-80"></i>
+                        <i class="fas <i class="fa-solid fa-microchip text-6xl text-white opacity-80"></i>
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-2 dark:text-white">AI Image Genaration</h3>
@@ -327,7 +327,7 @@
                             <span class="bg-yellow-100 dark:bg-yellow-900 text-yellow-800 dark:text-yellow-200 px-2 py-1 rounded text-xs">MongoDB</span>
                         </div>
                         <div class="flex space-x-3">
-                            <a href="#" class="text-blue-500 hover:text-blue-700 dark:text-blue-400 dark:hover:text-blue-300">
+                            <a href="sxndr.com/img-generator" class="text-blue-500 hover:text-blue-700 dark:text-blue-400 dark:hover:text-blue-300">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
                             <a href="#" class="text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-300">
@@ -340,12 +340,12 @@
                 <!-- Project 2 -->
                 <div class="bg-gray-50 dark:bg-gray-700 rounded-xl overflow-hidden shadow-sm card-hover">
                     <div class="h-48 bg-gradient-to-r from-green-400 to-blue-500 flex items-center justify-center">
-                        <i class="fas fa-mobile-alt text-6xl text-white opacity-80"></i>
+                        <i class="fas fa-images text-6xl text-white opacity-80"></i>
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2 dark:text-white">Task Management App</h3>
+                        <h3 class="text-xl font-semibold mb-2 dark:text-white">Gallery</h3>
                         <p class="text-gray-600 dark:text-gray-300 mb-4">
-                            A mobile-first task management application with offline capabilities.
+                            A Gallery to learn about my vibe.
                         </p>
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="bg-blue-100 dark:bg-blue-900 text-blue-800 dark:text-blue-200 px-2 py-1 rounded text-xs">React Native</span>
@@ -353,7 +353,7 @@
                             <span class="bg-pink-100 dark:bg-pink-900 text-pink-800 dark:text-pink-200 px-2 py-1 rounded text-xs">Firebase</span>
                         </div>
                         <div class="flex space-x-3">
-                            <a href="#" class="text-blue-500 hover:text-blue-700 dark:text-blue-400 dark:hover:text-blue-300">
+                            <a href="sxndr.com/gallery.html" class="text-blue-500 hover:text-blue-700 dark:text-blue-400 dark:hover:text-blue-300">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
                             <a href="#" class="text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-300">
