--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 <!-- Project 1 -->
                 <div class="bg-gray-50 dark:bg-gray-700 rounded-xl overflow-hidden shadow-sm card-hover">
                     <div class="h-48 bg-gradient-to-r from-blue-400 to-purple-500 flex items-center justify-center">
-                        <i class="fas <i class="fa-solid fa-microchip text-6xl text-white opacity-80"></i>
+                        <i class="fas fa-microchip text-6xl text-white opacity-80"></i>
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-2 dark:text-white">AI Image Genaration</h3>
@@ -353,7 +353,7 @@
                             <span class="bg-pink-100 dark:bg-pink-900 text-pink-800 dark:text-pink-200 px-2 py-1 rounded text-xs">Firebase</span>
                         </div>
                         <div class="flex space-x-3">
-                            <a href="sxndr.com/gallery.html" class="text-blue-500 hover:text-blue-700 dark:text-blue-400 dark:hover:text-blue-300">
+                            <a href="sxndr.com/gallery" class="text-blue-500 hover:text-blue-700 dark:text-blue-400 dark:hover:text-blue-300">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
                             <a href="#" class="text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-300">
