--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                             <span class="bg-yellow-100 dark:bg-yellow-900 text-yellow-800 dark:text-yellow-200 px-2 py-1 rounded text-xs">MongoDB</span>
                         </div>
                         <div class="flex space-x-3">
-                            <a href="sxndr.com/img-generator" class="text-blue-500 hover:text-blue-700 dark:text-blue-400 dark:hover:text-blue-300">
+                            <a href="/img-generator" class="text-blue-500 hover:text-blue-700 dark:text-blue-400 dark:hover:text-blue-300" target="_blank">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
                             <a href="#" class="text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-300">
@@ -353,7 +353,7 @@
                             <span class="bg-pink-100 dark:bg-pink-900 text-pink-800 dark:text-pink-200 px-2 py-1 rounded text-xs">Firebase</span>
                         </div>
                         <div class="flex space-x-3">
-                            <a href="sxndr.com/gallery" class="text-blue-500 hover:text-blue-700 dark:text-blue-400 dark:hover:text-blue-300">
+                            <a href="/gallery" class="text-blue-500 hover:text-blue-700 dark:text-blue-400 dark:hover:text-blue-300">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
                             <a href="#" class="text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-300">
