--- a/gallery.html
+++ b/gallery.html
@@ -33,11 +33,11 @@
                     <a href="#" class="text-xl font-bold gradient-text">Sexendrecks</a>
                 </div>
                 <div class="hidden md:flex items-center space-x-8">
-                    <a href="#home" class="nav-link text-gray-700 hover:text-blue-500 dark:text-gray-300">Home</a>
-                    <a href="#about" class="nav-link text-gray-700 hover:text-blue-500 dark:text-gray-300">About</a>
-                    <a href="#skills" class="nav-link text-gray-700 hover:text-blue-500 dark:text-gray-300">Skills</a>
-                    <a href="#projects" class="nav-link text-gray-700 hover:text-blue-500 dark:text-gray-300">Projects</a>
-                    <a href="#contact" class="nav-link text-gray-700 hover:text-blue-500 dark:text-gray-300">Contact</a>
+                    <a href="/#home" class="nav-link text-gray-700 hover:text-blue-500 dark:text-gray-300">Home</a>
+                    <a href="/#about" class="nav-link text-gray-700 hover:text-blue-500 dark:text-gray-300">About</a>
+                    <a href="/#skills" class="nav-link text-gray-700 hover:text-blue-500 dark:text-gray-300">Skills</a>
+                    <a href="/#projects" class="nav-link text-gray-700 hover:text-blue-500 dark:text-gray-300">Projects</a>
+                    <a href="/#contact" class="nav-link text-gray-700 hover:text-blue-500 dark:text-gray-300">Contact</a>
                     <button id="dark-mode-toggle" class="w-10 h-10 rounded-full flex items-center justify-center focus:outline-none">
                         <i id="dark-mode-icon" class="fas fa-moon text-gray-700 dark:text-yellow-300"></i>
                     </button>
