--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,7 @@
     
       gtag('config', 'G-XG4M7Z90QZ');
     </script>
+      <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
