--- a/index.html
+++ b/index.html
@@ -369,9 +369,9 @@
                         <i class="fas fa-chart-line text-6xl text-white opacity-80"></i>
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2 dark:text-white">Data Visualization Dashboard</h3>
+                        <h3 class="text-xl font-semibold mb-2 dark:text-white">Quotes Slider</h3>
                         <p class="text-gray-600 dark:text-gray-300 mb-4">
-                            Interactive dashboard for visualizing complex datasets with filtering capabilities.
+                            Interactive slider where Quotes from friends of mine et displayed.
                         </p>
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="bg-blue-100 dark:bg-blue-900 text-blue-800 dark:text-blue-200 px-2 py-1 rounded text-xs">D3.js</span>
@@ -379,7 +379,7 @@
                             <span class="bg-yellow-100 dark:bg-yellow-900 text-yellow-800 dark:text-yellow-200 px-2 py-1 rounded text-xs">PostgreSQL</span>
                         </div>
                         <div class="flex space-x-3">
-                            <a href="#" class="text-blue-500 hover:text-blue-700 dark:text-blue-400 dark:hover:text-blue-300">
+                            <a href="/quotes" class="text-blue-500 hover:text-blue-700 dark:text-blue-400 dark:hover:text-blue-300">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
                             <a href="#" class="text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-300">
