--- a/index.html
+++ b/index.html
@@ -462,15 +462,15 @@
                             </div>
                             <div>
                                 <h4 class="font-medium text-gray-800 dark:text-white">Email</h4>
-                                <p class="text-gray-600 dark:text-gray-300">mike.zaugg.webdev@gmail.com</p>
+                                <p class="text-gray-600 dark:text-gray-300">mike.zaugg@sxndr.com</p>
                             </div>
                         </div>
                         
-                        <div class="flex items-start">
+                        <!-- <div class="flex items-start">
                             <div class="text-blue-500 mr-4 mt-1">
                                 <i class="fas fa-phone-alt text-xl"></i>
                             </div>
-                            <!--<div>
+                           <div>
                                 <h4 class="font-medium text-gray-800">Phone</h4>
                                 <p class="text-gray-600">+1 (123) 456-7890</p>
                             </div> -->
@@ -480,7 +480,7 @@
                     <div class="mt-10">
                         <h4 class="font-medium text-gray-800 dark:text-white mb-4">Follow Me</h4>
                         <div class="flex space-x-4">
-                            <a href="#" class="w-10 h-10 rounded-full bg-blue-100 dark:bg-gray-700 text-blue-500 dark:text-blue-400 flex items-center justify-center hover:bg-blue-500 hover:text-white transition duration-300">
+                            <a href="https://github.com/mike-s-zaugg" class="w-10 h-10 rounded-full bg-blue-100 dark:bg-gray-700 text-blue-500 dark:text-blue-400 flex items-center justify-center hover:bg-blue-500 hover:text-white transition duration-300">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="#" class="w-10 h-10 rounded-full bg-blue-100 dark:bg-gray-700 text-blue-500 dark:text-blue-400 flex items-center justify-center hover:bg-blue-500 hover:text-white transition duration-300">
