--- a/index.html
+++ b/index.html
@@ -172,6 +172,80 @@
         </div>
     </section>
 
+    <!-- Timeline Section -->
+    <section id="timeline" class="section py-20 bg-gray-50 dark:bg-gray-900">
+        <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="text-center mb-16">
+                <h2 class="text-3xl md:text-4xl font-bold mb-4 dark:text-white">My <span class="gradient-text">Journey</span></h2>
+                <div class="w-20 h-1 bg-gradient-to-r from-blue-500 to-purple-500 mx-auto"></div>
+                <p class="text-gray-600 dark:text-gray-300 max-w-2xl mx-auto mt-4">
+                    A brief overview of my career path and significant milestones.
+                </p>
+            </div>
+
+            <div class="relative wrap overflow-hidden p-10 h-full">
+                <div class="border-2-2 absolute h-full border-opacity-20 border-blue-400 dark:border-purple-400" style="left: 50%"></div>
+                
+                <div class="mb-8 flex justify-between items-center w-full right-timeline">
+                    <div class="order-1 w-5/12"></div>
+                    <div class="z-20 flex items-center order-1 bg-blue-500 shadow-xl w-8 h-8 rounded-full">
+                        <h1 class="mx-auto font-semibold text-lg text-white">1</h1>
+                    </div>
+                    <div class="order-1 bg-white dark:bg-gray-800 rounded-lg shadow-xl w-5/12 px-6 py-4 transition-transform duration-300 hover:scale-105">
+                        <h3 class="mb-3 font-bold text-gray-800 dark:text-white text-xl">Start of Tech Journey</h3>
+                        <p class="text-sm leading-snug tracking-wide text-gray-600 dark:text-gray-300">
+                            Began exploring web development and programming through online courses and personal projects.
+                        </p>
+                        <span class="text-xs text-gray-500 dark:text-gray-400 block mt-2">January 2024</span>
+                    </div>
+                </div>
+
+                <div class="mb-8 flex justify-between flex-row-reverse items-center w-full left-timeline">
+                    <div class="order-1 w-5/12"></div>
+                    <div class="z-20 flex items-center order-1 bg-purple-500 shadow-xl w-8 h-8 rounded-full">
+                        <h1 class="mx-auto font-semibold text-lg text-white">2</h1>
+                    </div>
+                    <div class="order-1 bg-white dark:bg-gray-800 rounded-lg shadow-xl w-5/12 px-6 py-4 transition-transform duration-300 hover:scale-105">
+                        <h3 class="mb-3 font-bold text-gray-800 dark:text-white text-xl">First Project Completion</h3>
+                        <p class="text-sm leading-snug tracking-wide text-gray-600 dark:text-gray-300">
+                            Successfully developed and deployed my first significant web application, an AI Image Generator.
+                        </p>
+                        <span class="text-xs text-gray-500 dark:text-gray-400 block mt-2">March 2024</span>
+                    </div>
+                </div>
+
+                <div class="mb-8 flex justify-between items-center w-full right-timeline">
+                    <div class="order-1 w-5/12"></div>
+                    <div class="z-20 flex items-center order-1 bg-green-500 shadow-xl w-8 h-8 rounded-full">
+                        <h1 class="mx-auto font-semibold text-lg text-white">3</h1>
+                    </div>
+                    <div class="order-1 bg-white dark:bg-gray-800 rounded-lg shadow-xl w-5/12 px-6 py-4 transition-transform duration-300 hover:scale-105">
+                        <h3 class="mb-3 font-bold text-gray-800 dark:text-white text-xl">Deep Dive into React</h3>
+                        <p class="text-sm leading-snug tracking-wide text-gray-600 dark:text-gray-300">
+                            Started focusing on learning React and building more complex front-end applications.
+                        </p>
+                        <span class="text-xs text-gray-500 dark:text-gray-400 block mt-2">June 2024</span>
+                    </div>
+                </div>
+
+                <div class="mb-8 flex justify-between flex-row-reverse items-center w-full left-timeline">
+                    <div class="order-1 w-5/12"></div>
+                    <div class="z-20 flex items-center order-1 bg-yellow-500 shadow-xl w-8 h-8 rounded-full">
+                        <h1 class="mx-auto font-semibold text-lg text-white">4</h1>
+                    </div>
+                    <div class="order-1 bg-white dark:bg-gray-800 rounded-lg shadow-xl w-5/12 px-6 py-4 transition-transform duration-300 hover:scale-105">
+                        <h3 class="mb-3 font-bold text-gray-800 dark:text-white text-xl">Current Focus: Backend & Databases</h3>
+                        <p class="text-sm leading-snug tracking-wide text-gray-600 dark:text-gray-300">
+                            Currently expanding my knowledge in backend development, databases, and API design.
+                        </p>
+                        <span class="text-xs text-gray-500 dark:text-gray-400 block mt-2">Present (May 2025)</span>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
     <!-- Skills Section -->
 <section id="skills" class="section py-20 bg-gray-50 dark:bg-gray-900" style="position: relative; overflow: visible;">
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
