--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
                     <div class="order-1 bg-white dark:bg-gray-800 rounded-lg shadow-xl w-5/12 px-6 py-4 transition-transform duration-300 hover:scale-105">
                         <h3 class="mb-3 font-bold text-gray-800 dark:text-white text-xl">Start of Tech Journey</h3>
                         <p class="text-sm leading-snug tracking-wide text-gray-600 dark:text-gray-300">
-                            Began exploring web development and programming through online courses and personal projects.
+                            Began an apprenticeship at a tech company, focusing on web development. Also started a Berufsmatur.
                         </p>
-                        <span class="text-xs text-gray-500 dark:text-gray-400 block mt-2">January 2024</span>
+                        <span class="text-xs text-gray-500 dark:text-gray-400 block mt-2">August 2024</span>
                     </div>
                 </div>
 
@@ -207,11 +207,11 @@
                         <h1 class="mx-auto font-semibold text-lg text-white">2</h1>
                     </div>
                     <div class="order-1 bg-white dark:bg-gray-800 rounded-lg shadow-xl w-5/12 px-6 py-4 transition-transform duration-300 hover:scale-105">
-                        <h3 class="mb-3 font-bold text-gray-800 dark:text-white text-xl">First Project Completion</h3>
+                        <h3 class="mb-3 font-bold text-gray-800 dark:text-white text-xl">First Semester Completed</h3>
                         <p class="text-sm leading-snug tracking-wide text-gray-600 dark:text-gray-300">
-                            Successfully developed and deployed my first significant web application, an AI Image Generator.
+                            I successfully completed my first semester in BM and am still learning to master HTML, CSS, and WebEdition.
                         </p>
-                        <span class="text-xs text-gray-500 dark:text-gray-400 block mt-2">March 2024</span>
+                        <span class="text-xs text-gray-500 dark:text-gray-400 block mt-2">December 2024</span>
                     </div>
                 </div>
 
@@ -221,11 +221,11 @@
                         <h1 class="mx-auto font-semibold text-lg text-white">3</h1>
                     </div>
                     <div class="order-1 bg-white dark:bg-gray-800 rounded-lg shadow-xl w-5/12 px-6 py-4 transition-transform duration-300 hover:scale-105">
-                        <h3 class="mb-3 font-bold text-gray-800 dark:text-white text-xl">Deep Dive into React</h3>
+                        <h3 class="mb-3 font-bold text-gray-800 dark:text-white text-xl">First real Projects</h3>
                         <p class="text-sm leading-snug tracking-wide text-gray-600 dark:text-gray-300">
-                            Started focusing on learning React and building more complex front-end applications.
+                            Was ready to start helping my company solve small problems. Learned MySQL.
                         </p>
-                        <span class="text-xs text-gray-500 dark:text-gray-400 block mt-2">June 2024</span>
+                        <span class="text-xs text-gray-500 dark:text-gray-400 block mt-2">February 2025</span>
                     </div>
                 </div>
 
@@ -235,11 +235,11 @@
                         <h1 class="mx-auto font-semibold text-lg text-white">4</h1>
                     </div>
                     <div class="order-1 bg-white dark:bg-gray-800 rounded-lg shadow-xl w-5/12 px-6 py-4 transition-transform duration-300 hover:scale-105">
-                        <h3 class="mb-3 font-bold text-gray-800 dark:text-white text-xl">Current Focus: Backend & Databases</h3>
+                        <h3 class="mb-3 font-bold text-gray-800 dark:text-white text-xl">Current Focus: Frontend and Python</h3>
                         <p class="text-sm leading-snug tracking-wide text-gray-600 dark:text-gray-300">
-                            Currently expanding my knowledge in backend development, databases, and API design.
+                            Currently expanding my knowledge in Python while continuing to deepen my skills in HTML.
                         </p>
-                        <span class="text-xs text-gray-500 dark:text-gray-400 block mt-2">Present (May 2025)</span>
+                        <span class="text-xs text-gray-500 dark:text-gray-400 block mt-2">Present</span>
                     </div>
                 </div>
 
