--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@
                 <!-- Skill Item 4 -->
                 <div class="bg-white dark:bg-gray-800 p-6 rounded-xl shadow-sm card-hover">
                     <div class="text-blue-600 mb-4 text-4xl">
-                        <i class="fab fa-react"></i>
+                        <img src="file-type-nunjucks.svg" style="width:36px; height: 36px;"/>
                     </div>
-                    <h3 class="text-lg font-semibold mb-2 dark:text-white">React</h3>
+                    <h3 class="text-lg font-semibold mb-2 dark:text-white">Nunjucks</h3>
                     <div class="w-full bg-gray-200 dark:bg-gray-700 rounded-full h-2">
                         <div class="bg-blue-600 h-2 rounded-full" style="width: 5%"></div>
                     </div>
@@ -343,7 +343,7 @@
                     </div>
                     <h3 class="text-lg font-semibold mb-2 dark:text-white">Github</h3>
                     <div class="w-full bg-gray-200 dark:bg-gray-700 rounded-full h-2">
-                        <div class="bg-gray-800 dark:bg-gray-300 h-2 rounded-full" style="width: 10%"></div>
+                        <div class="bg-gray-800 dark:bg-gray-300 h-2 rounded-full" style="width: 50%"></div>
                     </div>
                 </div>
                 <model-viewer 
